fix(FieldMessage): Fix whitespace below field messages

--- a/react/private/FieldMessage/FieldMessage.less
+++ b/react/private/FieldMessage/FieldMessage.less
@@ -1,10 +1,7 @@
 @import (reference) "~seek-style-guide/theme";
 
 .root {
-  margin-bottom: (@row-height * 5);
-  @media @mobile {
-    margin-bottom: (@row-height * 6);
-  }
+  margin-bottom: (@row-height * 4);
   &.noMarginBottom {
     margin-bottom: 0;
   }
